--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8"/>
+		<title>Berakon</title>
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	
@@ -11,10 +13,10 @@
 				 <tr>
 					<td align="center">
 					   <div class="LogoTausta"> 
-						  <img src="/Berakon/SitePages/index_tiedostot/pgy3.png" data-themekey="#" width="75%" alt=""/> 
+						  <img src="logo.png" data-themekey="#" width="75%" alt=""/> 
 						  <br/>
 						  <h1>Consulting concrete structures</h1>
-						  <h2>by Matti Pajari D.Sc. (Tech)</h2>
+						  <h2>by Matti Pajari D.Sc. (Tech.)</h2>
 					   </div>
 					</td>
 				 </tr>
