Fixed image name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                     <tr>
                         <td align="center">
                             <div class="LogoTausta">
-                                <img src="logo.png" data-themekey="#" width="75%" alt="" />
+                                <img src="logo.PNG" data-themekey="#" width="75%" alt="" />
                                 <br/>
                                 <h1>Consulting concrete structures</h1>
                                 <h2>by Matti Pajari D.Sc. (Tech.)</h2>
